# pyeither

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
pyeither/: __init__.py  either.py
tests/: test_either.py
