[tool.poetry]
name = "pyeither"
version = "0.1.0"
description = "Alternative scala.util.Either implimented by Python"
authors = ["kentac55 <dev.kentac55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"
pylint = "^2.8.3"
isort = "^5.8.0"
black = "^21.6b0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
